--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "Backend blogList",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "start": "node index.js",
     "dev": "nodemon index.js"
   },
   "author": "Juan Arias",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^27.5.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
@@ -18,5 +19,8 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "mongoose": "^6.2.0"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
